--- a/interests.html
+++ b/interests.html
@@ -160,6 +160,18 @@
             </div>
         </div>
     </footer>
-</body>
-
+    <script>
+    function initMap() {
+            var map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 3,
+                center: {
+                    lat: 46.619261,
+                    lng: -33.134766
+                }
+            });
+        }
+    </script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1v2wYBN15ThbApo8GeY2pTX46KMiA16g&callback=initMap">
+    </script>
 </html>
