--- a/interests.html
+++ b/interests.html
@@ -169,6 +169,42 @@
                     lng: -33.134766
                 }
             });
+            
+            var labels = "ABCDEFGHIJKLMONPQRSTUVWXYZ";
+
+
+
+            var locations = [{
+
+                lat: 40.785091,
+
+                lng: -73.968285
+
+            }, {
+
+                lat: 41.084045,
+
+                lng: -73.874256
+
+            }, {
+
+                lat: 40.754932,
+
+                lng: -73.984016
+
+            }];
+
+            var markers = locations.map(function(location, i) {
+                return new google.maps.Marker({
+                    position: location,
+                    label: labels[i % labels.length]
+                });
+            });
+
+            var markerCluster = new MarkerClusterer(map, markers, {
+                imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'
+
+            });
         }
     </script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
